src/test/ui/feature-gates/feature-gate-untagged_unions.stderr
error[E0658]: unions with non-`Copy` fields other than `ManuallyDrop<T>` are unstable
  --> $DIR/feature-gate-untagged_unions.rs:20:5
   |
LL |     a: std::cell::RefCell<i32>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #55149 <https://github.com/rust-lang/rust/issues/55149> for more information
   = help: add `#![feature(untagged_unions)]` to the crate attributes to enable

error[E0740]: unions may not contain fields that need dropping
  --> $DIR/feature-gate-untagged_unions.rs:16:5
   |
LL |     a: String,
   |     ^^^^^^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<String>,
   |        +++++++++++++++++++++++      +

error[E0740]: unions may not contain fields that need dropping
  --> $DIR/feature-gate-untagged_unions.rs:24:5
   |
LL |     a: T,
   |     ^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<T>,
   |        +++++++++++++++++++++++ +

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0658, E0740.
For more information about an error, try `rustc --explain E0658`.
